--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/QuanLySanBong.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.com.mysql.jdbc_5.1.5.jar=C:\\Users\\ngona\\Downloads\\com.mysql.jdbc_5.1.5.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Anh Le\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\ngona\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.mysql-connector.jar=../../../Downloads/mysql-connector.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
